[package]
name = "rs-up-sais-checker"
version = "0.1.0"
authors = ["Grant Yap <grantivanyap@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0", features = ["standard_framework"] }
reqwest = { version = "0.10.7", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
serde = "1.0.115"
chrono = "0.4.15"
ron = "*"
